--- a/CS/DXApplication3/MainWindow.xaml
+++ b/CS/DXApplication3/MainWindow.xaml
@@ -1,4 +1,4 @@
-<dx:DXWindow x:Class="DXApplication3.MainWindow"
+<dx:ThemedWindow x:Class="DXApplication3.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:dx="http://schemas.devexpress.com/winfx/2008/xaml/core"
@@ -7,13 +7,13 @@
         xmlns:dxe="http://schemas.devexpress.com/winfx/2008/xaml/editors"
         xmlns:local="clr-namespace:DXApplication3"
         Title="MainWindow" Height="550" Width="725">
-    <dx:DXWindow.Resources>
+    <dx:ThemedWindow.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="MultiValueGroupingTemplates.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </dx:DXWindow.Resources>
+    </dx:ThemedWindow.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
@@ -22,16 +22,16 @@
         <dxg:GridControl Name="grid" AutoExpandAllGroups="True">
             <dxg:GridControl.Columns>
                 <dxg:GridColumn FieldName="Complete" Width="80" AllowResizing="False" FixedWidth="True" />
-                <dxg:GridColumn FieldName="TaskName" Width="2*" DisplayTemplate="{StaticResource displayTemplate}" EditTemplate="{StaticResource editTemplate}" />
-                <dxg:GridColumn FieldName="CategoryName" GroupIndex="0" AllowGrouping="True" Width="4*" Header="Category" DisplayTemplate="{StaticResource displayTemplate}" EditTemplate="{StaticResource editTemplate}" ReadOnly="True" />
-                <dxg:GridColumn FieldName="DueDate" Width="3*" DisplayTemplate="{StaticResource displayTemplate}" EditTemplate="{StaticResource editTemplate}" />
-                <dxg:GridColumn FieldName="PercentComplete" Width="2*" Header="% Complete" DisplayTemplate="{StaticResource displayTemplate}" EditTemplate="{StaticResource editTemplate}">
+                <dxg:GridColumn FieldName="TaskName" Width="2*" CellStyle="{StaticResource cellStyle}" />
+                <dxg:GridColumn FieldName="CategoryName" GroupIndex="0" AllowGrouping="True" Width="4*" Header="Category" CellStyle="{StaticResource cellStyle}" ReadOnly="True" />
+                <dxg:GridColumn FieldName="DueDate" Width="3*" CellStyle="{StaticResource cellStyle}" />
+                <dxg:GridColumn FieldName="PercentComplete" Width="2*" Header="% Complete" CellStyle="{StaticResource cellStyle}">
                     <dxg:GridColumn.EditSettings>
                         <dxe:SpinEditSettings MaxValue="100"
-      MinValue="0"
-      MaskType="Numeric"
-      Mask="P0"
-      MaskUseAsDisplayFormat="True">
+                                              MinValue="0"
+                                              MaskType="Numeric"
+                                              Mask="P0"
+                                              MaskUseAsDisplayFormat="True">
                         </dxe:SpinEditSettings>
                     </dxg:GridColumn.EditSettings>
                 </dxg:GridColumn>
@@ -49,4 +49,4 @@
 
         <Button HorizontalAlignment="Stretch" Name="groupButton" Click="groupButton_Click" MinWidth="160" Height="22" Grid.Column="1" />
     </Grid>
-</dx:DXWindow>
+</dx:ThemedWindow>
